RESOLVED FIXED272241
REGRESSION(276009@main): Crash in ApplicationStateTracker::applicationDidEnterBackground()
https://bugs.webkit.org/show_bug.cgi?id=272241
Summary REGRESSION(276009@main): Crash in ApplicationStateTracker::applicationDidEnte...
Jer Noble
Reported 2024-04-05 12:40:21 PDT
REGRESSION(276009@main): Crash in ApplicationStateTracker::applicationDidEnterBackground()
Attachments
Jer Noble
Comment 1 2024-04-05 12:40:28 PDT
Jer Noble
Comment 2 2024-04-05 12:44:05 PDT
EWS
Comment 3 2024-04-06 19:40:26 PDT
Committed 277170@main (15b191da20fc): <https://commits.webkit.org/277170@main> Reviewed commits have been landed. Closing PR #26912 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.