Cherry-pick 15b191da20fc. rdar://125895046

REGRESSION(276009@main): Crash in ApplicationStateTracker::applicationDidEnterBackground()
    https://bugs.webkit.org/show_bug.cgi?id=272241
    rdar://125895046

    Reviewed by Eric Carlson.

    From crash reports, it appears that the NSNotificationCenter observers are being called after
    the ApplicationStateTracker itself has been destroyed. Ensure these observers are all
    unregistered upon destruction, and additionally protect against the observers being called
    after unregistration by passing a WeakPtr into the observer's lambda.

    * Source/WebKit/UIProcess/ApplicationStateTracker.h:
    * Source/WebKit/UIProcess/ApplicationStateTracker.mm:
    (WebKit::ApplicationStateTracker::~ApplicationStateTracker):
    (WebKit::ApplicationStateTracker::removeAllObservers):
    (WebKit::ApplicationStateTracker::setScene):
    (WebKit::ApplicationStateTracker::setViewController):

    Canonical link: https://commits.webkit.org/277170@main

Canonical link: https://commits.webkit.org/277149.15@safari-7619.1.9-branch