Source/WebKit/UIProcess/ApplicationStateTracker.mm
@@ -176,8 +176,31 @@ ApplicationStateTracker::~ApplicationStateTracker()
     setScene(nil);
     setViewController(nil);
 
+    removeAllObservers();
+
     allApplicationStateTrackers().remove(*this);
     updateApplicationBackgroundState();
+}
+
+void ApplicationStateTracker::removeAllObservers()
+{
+    NSNotificationCenter *notificationCenter = [NSNotificationCenter defaultCenter];
+    if (m_didEnterBackgroundObserver) {
+        [notificationCenter removeObserver:m_didEnterBackgroundObserver];
+        m_didEnterBackgroundObserver = nil;
+    }
+    if (m_willEnterForegroundObserver) {
+        [notificationCenter removeObserver:m_willEnterForegroundObserver];
+        m_willEnterForegroundObserver = nil;
+    }
+    if (m_willBeginSnapshotSequenceObserver) {
+        [notificationCenter removeObserver:m_willBeginSnapshotSequenceObserver];
+        m_willBeginSnapshotSequenceObserver = nil;
+    }
+    if (m_didCompleteSnapshotSequenceObserver) {
+        [notificationCenter removeObserver:m_didCompleteSnapshotSequenceObserver];
+        m_didCompleteSnapshotSequenceObserver = nil;
+    }
 }
 
 void ApplicationStateTracker::setWindow(UIWindow *window)
@@ -254,14 +277,7 @@ void ApplicationStateTracker::setScene(UIScene *scene)
         return;
     }
 
-    NSNotificationCenter *notificationCenter = [NSNotificationCenter defaultCenter];
-
-    if (m_scene) {
-        [notificationCenter removeObserver:m_didEnterBackgroundObserver];
-        [notificationCenter removeObserver:m_willEnterForegroundObserver];
-        [notificationCenter removeObserver:m_willBeginSnapshotSequenceObserver];
-        [notificationCenter removeObserver:m_didCompleteSnapshotSequenceObserver];
-    }
+    removeAllObservers();
 
     m_scene = scene;
     m_isInBackground = isWindowAndSceneInBackground(m_window, m_scene);
@@ -271,21 +287,30 @@ void ApplicationStateTracker::setScene(UIScene *scene)
 
     RELEASE_LOG(ViewState, "%p - ApplicationStateTracker::ApplicationStateTracker(): m_isInBackground=%d", this, m_isInBackground);
 
-    m_didEnterBackgroundObserver = [notificationCenter addObserverForName:UISceneDidEnterBackgroundNotification object:scene queue:nil usingBlock:[this](NSNotification *notification) {
+    NSNotificationCenter *notificationCenter = [NSNotificationCenter defaultCenter];
+    m_didEnterBackgroundObserver = [notificationCenter addObserverForName:UISceneDidEnterBackgroundNotification object:scene queue:nil usingBlock:[this, weakThis = WeakPtr { *this }](NSNotification *notification) {
+        if (!weakThis)
+            return;
         RELEASE_LOG(ViewState, "%p - ApplicationStateTracker: UISceneDidEnterBackground", this);
         applicationDidEnterBackground();
     }];
 
-    m_willEnterForegroundObserver = [notificationCenter addObserverForName:UISceneWillEnterForegroundNotification object:scene queue:nil usingBlock:[this](NSNotification *notification) {
+    m_willEnterForegroundObserver = [notificationCenter addObserverForName:UISceneWillEnterForegroundNotification object:scene queue:nil usingBlock:[this, weakThis = WeakPtr { *this }](NSNotification *notification) {
+        if (!weakThis)
+            return;
         RELEASE_LOG(ViewState, "%p - ApplicationStateTracker: UISceneWillEnterForeground", this);
         applicationWillEnterForeground();
     }];
 
-    m_willBeginSnapshotSequenceObserver = [notificationCenter addObserverForName:_UISceneWillBeginSystemSnapshotSequence object:scene queue:nil usingBlock:[this](NSNotification *notification) {
+    m_willBeginSnapshotSequenceObserver = [notificationCenter addObserverForName:_UISceneWillBeginSystemSnapshotSequence object:scene queue:nil usingBlock:[this, weakThis = WeakPtr { *this }](NSNotification *notification) {
+        if (!weakThis)
+            return;
         willBeginSnapshotSequence();
     }];
 
-    m_didCompleteSnapshotSequenceObserver = [notificationCenter addObserverForName:_UISceneDidCompleteSystemSnapshotSequence object:scene queue:nil usingBlock:[this](NSNotification *notification) {
+    m_didCompleteSnapshotSequenceObserver = [notificationCenter addObserverForName:_UISceneDidCompleteSystemSnapshotSequence object:scene queue:nil usingBlock:[this, weakThis = WeakPtr { *this }](NSNotification *notification) {
+        if (!weakThis)
+            return;
         didCompleteSnapshotSequence();
     }];
 }
@@ -295,12 +320,7 @@ void ApplicationStateTracker::setViewController(UIViewController *serviceViewCon
     if (m_viewController.get() == serviceViewController)
         return;
 
-    NSNotificationCenter *notificationCenter = [NSNotificationCenter defaultCenter];
-
-    if (m_viewController) {
-        [notificationCenter removeObserver:m_didEnterBackgroundObserver];
-        [notificationCenter removeObserver:m_willEnterForegroundObserver];
-    }
+    removeAllObservers();
 
     m_viewController = serviceViewController;
     if (!m_viewController) {
@@ -321,11 +341,16 @@ void ApplicationStateTracker::setViewController(UIViewController *serviceViewCon
 
     RELEASE_LOG(ProcessSuspension, "%{public}s has PID %d, host application PID=%d, isInBackground=%d", _UIApplicationIsExtension() ? "Extension" : "ViewService", getpid(), applicationPID, m_isInBackground);
 
-    m_didEnterBackgroundObserver = [notificationCenter addObserverForName:viewServiceBackgroundNotificationName object:serviceViewController queue:nil usingBlock:[this, applicationPID](NSNotification *) {
+    NSNotificationCenter *notificationCenter = [NSNotificationCenter defaultCenter];
+    m_didEnterBackgroundObserver = [notificationCenter addObserverForName:viewServiceBackgroundNotificationName object:serviceViewController queue:nil usingBlock:[this, weakThis = WeakPtr { *this }, applicationPID](NSNotification *) {
+        if (!weakThis)
+            return;
         RELEASE_LOG(ProcessSuspension, "%{public}s has PID %d, host application PID=%d, didEnterBackground", _UIApplicationIsExtension() ? "Extension" : "ViewService", getpid(), applicationPID);
         applicationDidEnterBackground();
     }];
-    m_willEnterForegroundObserver = [notificationCenter addObserverForName:viewServiceForegroundNotificationName object:serviceViewController queue:nil usingBlock:[this, applicationPID](NSNotification *) {
+    m_willEnterForegroundObserver = [notificationCenter addObserverForName:viewServiceForegroundNotificationName object:serviceViewController queue:nil usingBlock:[this, weakThis = WeakPtr { *this }, applicationPID](NSNotification *) {
+        if (!weakThis)
+            return;
         RELEASE_LOG(ProcessSuspension, "%{public}s has PID %d, host application PID=%d, willEnterForeground", _UIApplicationIsExtension() ? "Extension" : "ViewService", getpid(), applicationPID);
         applicationWillEnterForeground();
     }];
